# vigra_math

./: CMakeLists.txt  README.md  VigraAddTest.cmake
cmake/: VigraAddDependency.cmake  VigraAddExternal.cmake  VigraAddTest.cmake
cmake/vigra_cmake/: VigraAddExternal.cmake  VigraAddTest.cmake
cmake/vigralibs_cmake/: VigraAddExternal.cmake  VigraAddTest.cmake
include/vigra2/: algorithm.hxx  clebsch-gordan.hxx  math.hxx  polynomial.hxx  splines.hxx
include/vigra2/math/: algorithm.hxx  autodiff.hxx  bessel.hxx  clebsch-gordan.hxx  fixedpoint.hxx  functions.hxx  gaussians.hxx  math.hxx  matrix.hxx  polynomial.hxx  quaternion.hxx  rational.hxx  splines.hxx
test/: CMakeLists.txt  test_algorithm.cxx  test_autodiff.cxx  test_bessel.cxx  test_clebsch-gordan.cxx  test_fixedpoint.cxx  test_functions.cxx  test_gaussians.cxx  test_math.cxx  test_matrix.cxx  test_polynomial.cxx  test_quaternion.cxx  test_rational.cxx  test_splines.cxx
